--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+
+html{
+  scroll-behavior: smooth;
+}
+
 @layer base {
   :root {
     --radius: 0.5rem;
@@ -50,7 +57,9 @@
     --chart-2: 160 60% 45%;
     --chart-3: 30 80% 55%;
     --chart-4: 280 65% 60%;
-    --chart-5: 340 75% 55%}
+    --chart-5: 340 75% 55%;
+    --background: 240 10% 3.9%;
+    --primary: 0 0% 98%}
 }
 @layer base {
   * {
